# server/resource/vcenterws_db/Execution.js
@@ -10,7 +10,7 @@
  
  * DO NOT EDIT THIS FILE!! 
  * 
- *  TO CUSTOMIZE User.js PLEASE EDIT ../custom/UserCustom.js
+ *  TO CUSTOMIZE Execution.js PLEASE EDIT ../custom/ExecutionCustom.js
  * 
  *  -- THIS FILE WILL BE OVERWRITTEN ON THE NEXT SKAFFOLDER'S CODE GENERATION --
  * 
@@ -19,32 +19,21 @@ const app = require('../../app.js');
 const db_vcenterws_db = require('../../db/vcenterws_db_schema.js')
 const properties = require('../../properties.js');
 const handleError = require('../../security/util.js').handleError;
-require('./custom/UserCustom.js');
+require('./custom/ExecutionCustom.js');
 
 /*
- * SCHEMA DB User
+ * SCHEMA DB Execution
  * 
 	{
-		infrastrcture: {
-			type: 'String', 
-			required : true
-		},
-		password: {
-			type: 'String', 
-			required : true
-		},
-		role: {
-			type: 'String'
-		},
-		username: {
-			type: 'String', 
-			required : true
-		},
 		//RELATIONS
 		
 		
 		//EXTERNAL RELATIONS
 		
+		Script: {
+			type: Schema.ObjectId,
+			ref : "Execution"
+		},
 		user: {
 			type: Schema.ObjectId,
 			ref : "Execution"
@@ -60,12 +49,12 @@ require('./custom/UserCustom.js');
 
 
 /**
- * UserService.create
+ * ExecutionService.create
  *   @description CRUD ACTION create
  *
  */
-app.post(properties.api + '/Users', function (req, res) {
-	obj = new db_vcenterws_db.User(req.body);
+app.post(properties.api + '/executions', function (req, res) {
+	obj = new db_vcenterws_db.Execution(req.body);
 	obj.save(function (err) {
 		if (err) return handleError(err, res);
 		res.send(obj);
@@ -73,51 +62,81 @@ app.post(properties.api + '/Users', function (req, res) {
 });
 
 /**
- * UserService.delete
+ * ExecutionService.delete
  *   @description CRUD ACTION delete
  *   @param ObjectId id Id
  *
  */
-app['delete'](properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findByIdAndRemove(req.params.id, function (err) {
+app['delete'](properties.api + '/executions/:id', function (req, res) {
+	db_vcenterws_db.Execution.findByIdAndRemove(req.params.id, function (err) {
 		  if (err) return handleError(err, res);
 		  res.send(err);
 	});
 });
 
 /**
- * UserService.get
+ * ExecutionService.findByScript
+ *   @description CRUD ACTION findByScript
+ *   @param Objectid key Id della risorsa Script da cercare
+ *
+ */
+app.get(properties.api + '/executions/findByScript/:key', function (req, res) {
+
+	db_vcenterws_db.Execution.find({ 'Script' : req.params.key}).exec(function (err, list) {
+		if (err) return handleError(err, res);
+		res.send(list);
+	});
+	
+});
+
+/**
+ * ExecutionService.findByuser
+ *   @description CRUD ACTION findByuser
+ *   @param Objectid key Id della risorsa user da cercare
+ *
+ */
+app.get(properties.api + '/executions/findByuser/:key', function (req, res) {
+
+	db_vcenterws_db.Execution.find({ 'user' : req.params.key}).exec(function (err, list) {
+		if (err) return handleError(err, res);
+		res.send(list);
+	});
+	
+});
+
+/**
+ * ExecutionService.get
  *   @description CRUD ACTION get
  *   @param ObjectId id Id 
  *
  */
-app.get(properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findOne({_id:req.params.id}).exec(function (err, obj) {
+app.get(properties.api + '/executions/:id', function (req, res) {
+	db_vcenterws_db.Execution.findOne({_id:req.params.id}).exec(function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
 });
 
 /**
- * UserService.list
+ * ExecutionService.list
  *   @description CRUD ACTION list
  *
  */
-app.get(properties.api + '/Users', function (req, res) {
-	db_vcenterws_db.User.find().exec(function (err, list) {
+app.get(properties.api + '/executions', function (req, res) {
+	db_vcenterws_db.Execution.find().exec(function (err, list) {
 		if (err) return handleError(err, res);
 		res.send(list);
 	});
 });
 
 /**
- * UserService.update
+ * ExecutionService.update
  *   @description CRUD ACTION update
  *   @param ObjectId id Id
  *
  */
-app.post(properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
+app.post(properties.api + '/executions/:id', function (req, res) {
+	db_vcenterws_db.Execution.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
