# server/resource/vcenterws_db/Results.js
@@ -10,7 +10,7 @@
  
  * DO NOT EDIT THIS FILE!! 
  * 
- *  TO CUSTOMIZE Infrastructure.js PLEASE EDIT ../custom/InfrastructureCustom.js
+ *  TO CUSTOMIZE Results.js PLEASE EDIT ../custom/ResultsCustom.js
  * 
  *  -- THIS FILE WILL BE OVERWRITTEN ON THE NEXT SKAFFOLDER'S CODE GENERATION --
  * 
@@ -19,16 +19,16 @@ const app = require('../../app.js');
 const db_vcenterws_db = require('../../db/vcenterws_db_schema.js')
 const properties = require('../../properties.js');
 const handleError = require('../../security/util.js').handleError;
-require('./custom/InfrastructureCustom.js');
+require('./custom/ResultsCustom.js');
 
 /*
- * SCHEMA DB Infrastructure
+ * SCHEMA DB Results
  * 
 	{
-		release: {
+		data: {
 			type: 'String'
 		},
-		vc: {
+		path: {
 			type: 'String'
 		},
 		//RELATIONS
@@ -36,14 +36,6 @@ require('./custom/InfrastructureCustom.js');
 		
 		//EXTERNAL RELATIONS
 		
-		infrastructure: [{
-			type: Schema.ObjectId,
-			ref : "User"
-		}],
-		user: [{
-			type: Schema.ObjectId,
-			ref : "Infrastructure"
-		}],
 		
 	}
  * 
@@ -55,12 +47,12 @@ require('./custom/InfrastructureCustom.js');
 
 
 /**
- * InfrastructureService.create
+ * ResultsService.create
  *   @description CRUD ACTION create
  *
  */
-app.post(properties.api + '/infrastructures', function (req, res) {
-	obj = new db_vcenterws_db.Infrastructure(req.body);
+app.post(properties.api + '/results', function (req, res) {
+	obj = new db_vcenterws_db.Results(req.body);
 	obj.save(function (err) {
 		if (err) return handleError(err, res);
 		res.send(obj);
@@ -68,66 +60,51 @@ app.post(properties.api + '/infrastructures', function (req, res) {
 });
 
 /**
- * InfrastructureService.delete
+ * ResultsService.delete
  *   @description CRUD ACTION delete
  *   @param ObjectId id Id
  *
  */
-app['delete'](properties.api + '/infrastructures/:id', function (req, res) {
-	db_vcenterws_db.Infrastructure.findByIdAndRemove(req.params.id, function (err) {
+app['delete'](properties.api + '/results/:id', function (req, res) {
+	db_vcenterws_db.Results.findByIdAndRemove(req.params.id, function (err) {
 		  if (err) return handleError(err, res);
 		  res.send(err);
 	});
 });
 
 /**
- * InfrastructureService.findByuser
- *   @description CRUD ACTION findByuser
- *   @param Objectid key Id della risorsa user da cercare
- *
- */
-app.get(properties.api + '/infrastructures/findByuser/:key', function (req, res) {
-
-	db_vcenterws_db.Infrastructure.find({ 'user' : req.params.key}).exec(function (err, list) {
-		if (err) return handleError(err, res);
-		res.send(list);
-	});
-	
-});
-
-/**
- * InfrastructureService.get
+ * ResultsService.get
  *   @description CRUD ACTION get
  *   @param ObjectId id Id 
  *
  */
-app.get(properties.api + '/infrastructures/:id', function (req, res) {
-	db_vcenterws_db.Infrastructure.findOne({_id:req.params.id}).exec(function (err, obj) {
+app.get(properties.api + '/results/:id', function (req, res) {
+	db_vcenterws_db.Results.findOne({_id:req.params.id}).exec(function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
 });
 
 /**
- * InfrastructureService.list
+ * ResultsService.list
  *   @description CRUD ACTION list
  *
  */
-app.get(properties.api + '/infrastructures', function (req, res) {
-	db_vcenterws_db.Infrastructure.find().exec(function (err, list) {
+app.get(properties.api + '/results', function (req, res) {
+	db_vcenterws_db.Results.find().exec(function (err, list) {
 		if (err) return handleError(err, res);
 		res.send(list);
 	});
 });
 
 /**
- * InfrastructureService.update
+ * ResultsService.update
  *   @description CRUD ACTION update
  *   @param ObjectId id Id
  *
  */
-app.post(properties.api + '/infrastructures/:id', function (req, res) {
-	db_vcenterws_db.Infrastructure.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
+app.post(properties.api + '/results/:id', function (req, res) {
+	db_vcenterws_db.Results.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
