# server/resource/vcenterws_db/Script.js
@@ -10,7 +10,7 @@
  
  * DO NOT EDIT THIS FILE!! 
  * 
- *  TO CUSTOMIZE User.js PLEASE EDIT ../custom/UserCustom.js
+ *  TO CUSTOMIZE Script.js PLEASE EDIT ../custom/ScriptCustom.js
  * 
  *  -- THIS FILE WILL BE OVERWRITTEN ON THE NEXT SKAFFOLDER'S CODE GENERATION --
  * 
@@ -19,33 +19,24 @@ const app = require('../../app.js');
 const db_vcenterws_db = require('../../db/vcenterws_db_schema.js')
 const properties = require('../../properties.js');
 const handleError = require('../../security/util.js').handleError;
-require('./custom/UserCustom.js');
+require('./custom/ScriptCustom.js');
 
 /*
- * SCHEMA DB User
+ * SCHEMA DB Script
  * 
 	{
-		infrastrcture: {
-			type: 'String', 
-			required : true
-		},
-		password: {
-			type: 'String', 
-			required : true
-		},
-		role: {
+		Name: {
 			type: 'String'
 		},
-		username: {
-			type: 'String', 
-			required : true
+		Path: {
+			type: 'String'
 		},
 		//RELATIONS
 		
 		
 		//EXTERNAL RELATIONS
 		
-		user: {
+		Script: {
 			type: Schema.ObjectId,
 			ref : "Execution"
 		},
@@ -60,12 +51,12 @@ require('./custom/UserCustom.js');
 
 
 /**
- * UserService.create
+ * ScriptService.create
  *   @description CRUD ACTION create
  *
  */
-app.post(properties.api + '/Users', function (req, res) {
-	obj = new db_vcenterws_db.User(req.body);
+app.post(properties.api + '/scripts', function (req, res) {
+	obj = new db_vcenterws_db.Script(req.body);
 	obj.save(function (err) {
 		if (err) return handleError(err, res);
 		res.send(obj);
@@ -73,51 +64,51 @@ app.post(properties.api + '/Users', function (req, res) {
 });
 
 /**
- * UserService.delete
+ * ScriptService.delete
  *   @description CRUD ACTION delete
  *   @param ObjectId id Id
  *
  */
-app['delete'](properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findByIdAndRemove(req.params.id, function (err) {
+app['delete'](properties.api + '/scripts/:id', function (req, res) {
+	db_vcenterws_db.Script.findByIdAndRemove(req.params.id, function (err) {
 		  if (err) return handleError(err, res);
 		  res.send(err);
 	});
 });
 
 /**
- * UserService.get
+ * ScriptService.get
  *   @description CRUD ACTION get
  *   @param ObjectId id Id 
  *
  */
-app.get(properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findOne({_id:req.params.id}).exec(function (err, obj) {
+app.get(properties.api + '/scripts/:id', function (req, res) {
+	db_vcenterws_db.Script.findOne({_id:req.params.id}).exec(function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
 });
 
 /**
- * UserService.list
+ * ScriptService.list
  *   @description CRUD ACTION list
  *
  */
-app.get(properties.api + '/Users', function (req, res) {
-	db_vcenterws_db.User.find().exec(function (err, list) {
+app.get(properties.api + '/scripts', function (req, res) {
+	db_vcenterws_db.Script.find().exec(function (err, list) {
 		if (err) return handleError(err, res);
 		res.send(list);
 	});
 });
 
 /**
- * UserService.update
+ * ScriptService.update
  *   @description CRUD ACTION update
  *   @param ObjectId id Id
  *
  */
-app.post(properties.api + '/Users/:id', function (req, res) {
-	db_vcenterws_db.User.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
+app.post(properties.api + '/scripts/:id', function (req, res) {
+	db_vcenterws_db.Script.findByIdAndUpdate(req.params.id, req.body, {'new': true}, function (err, obj) {
 		if (err) return handleError(err, res);
 		res.send(obj);
 	});
